# chat-bot

./: CMakeLists.txt  README.md
include/: bot.h
src/: bot.cpp  main.cpp
